# mpv-client

./: .gitignore  Cargo.toml  README.md
.zed/: settings.json
mpv-client/: Cargo.toml
mpv-client-sys/: Cargo.toml  build.rs  mpv.def  mpv.lib  pregenerated_bindings.rs  pregenerated_bindings_windows.rs
mpv-client-sys/src/: lib.rs  sym.rs
mpv-client/src/: error.rs  format.rs  lib.rs  node.rs
