[workspace]
members = ["mpv-client-sys", "mpv-client"]
resolver = "3"

[workspace.package]
readme = "README.md"
authors = ["Kevin Gavrois <kevin@gavrois.fr>", "BatogiX"]
edition = "2024"
repository = "https://github.com/BatogiX/mpv-client"
license = "GPL-3.0"
keywords = ["mpv", "libmpv"]

[workspace.dependencies]
ffi = { package = "mpv-client-cross-sys", version = "1.1", path = "mpv-client-sys" }
libc = "0.2"

# bindgen feature
bindgen = "0.72"

# Windows bindgen dependencies
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
