[package]
name = "mpv-client-sys"
version = "1.0.1"
edition = "2021"
authors = ["Kevin Gavrois <kevin@gavrois.fr>"]
description = "Raw bindings for libmpv client API"
license = "GPL-3.0"
repository = "https://github.com/TheCactusVert/mpv-client"
keywords = ["mpv", "libmpv"]
build = "build.rs"

[features]
use-bindgen = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
