[package]
name = "mpv-client-sys"
version = "1.0.1"
edition = "2021"
authors = ["Kevin Gavrois <kevin@gavrois.fr>"]
description = "Raw bindings for libmpv client API"
license = "GPL-3.0"
repository = "https://github.com/TheCactusVert/mpv-client"
keywords = ["mpv", "libmpv"]
build = "build.rs"

[features]
default = []
bindgen = [
    "dep:bindgen",
    "dep:syn",
    "dep:quote",
    "dep:proc-macro2",
    "dep:prettyplease",
]

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }


[target.'cfg(target_os = "windows")'.build-dependencies]
syn = { version = "2.0.117", features = ["full"], optional = true }
quote = { version = "1.0.45", optional = true }
proc-macro2 = { version = "1.0.106", optional = true }
prettyplease = { version = "0.2.37", optional = true }
