[package]
name = "mpv-client-cross-sys"
version = "1.1.0"
edition.workspace = true
authors.workspace = true
description = "Raw bindings for libmpv client API"
license.workspace = true
repository.workspace = true
keywords.workspace = true
build = "build.rs"

[features]
default = []
bindgen = [
    "dep:bindgen",
    "dep:syn",
    "dep:quote",
    "dep:proc-macro2",
    "dep:prettyplease",
]

[build-dependencies]
bindgen = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
syn = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }
