[package]
name = "mpv-client-cross"
version = "1.2.0"
edition.workspace = true
authors.workspace = true
description = "Bindings for libmpv client API that allow you to create plugins for MPV in Rust"
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
bindgen = ["ffi/bindgen"]

[dependencies]
ffi.workspace = true
libc.workspace = true
